# gps_location_server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  settings.json
proto/: controller.proto
src/: client.rs  client_handler.rs  client_info.rs  main.rs  rest.rs  server.rs  settings.rs
src/client/: command.rs  handler.rs  info.rs
src/server/: grpc.rs  mod.rs  rest.rs
