[package]
name = "gps_location_server"
description = "A server interact with 4G & GPS devices implemented in Rust"
version = "0.2.0"
edition = "2024"
authors = ["Stars sea <stars_sea@outlook.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Stars-sea/gps_location_server"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
env_logger = "0.11.8"
log = "0.4.29"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
axum = "0.8.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
