[package]
name = "gps_location_server"
description = "A server interact with 4G & GPS devices implemented in Rust"
version = "0.2.2"
edition = "2024"
authors = ["Stars sea <stars_sea@outlook.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Stars-sea/gps_location_server"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.8", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }

[features]
rest = ["axum", "tower-http"]
default = ["rest"]
